# diff-report-rs

./: Cargo.toml  README.md
src/: diagnostics.rs  diff.rs  main.rs
